# Kanarie

./: .gitignore  CMakeLists.txt  Kanarie.kdev4  Messages.sh
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
src/: CMakeLists.txt  KanarieSettings.kcfg  KanarieSettings.kcfgc  kanarie.cpp  kanarie.desktop  kanarie.h  kanarie.hpp  kanarieViewBase.ui  kanarieui.rc  kanarieview.cpp  kanarieview.h  main.cpp
src/ui/settings/: accounts.cpp  accounts.hpp  accounts.ui
src/ui/widget/: postarea.cpp  postarea.hpp  postarea.ui
